2003-10-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
	Added support for all applicable customizable makefile variables
	from tcl/macosx/Makefile.

	* macosx/README:
	* macosx/Wish.pbproj/project.pbxproj: ensure that the versioned
	wishX.X script works correctly when Tk.framework with multiple
	versions is present by referring to a copy of 'Wish Shell.app'
	located in Tk.framework/Versions/X.X/Resources.

2003-09-30  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXButton.c (TkpDisplayButton): Use the tk text
	drawing for checkbuttons & radiobuttons as well as for labels.
	* macosx/tkMacOSXEvent.c (XSync): New function, need to implement
	this so drawing will get flushed in "update idletasks".
	* tkMacOSXPort.h: convert #define of XSync to function def'n.
	
2003-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/demos/browse:		Added suitable [package require]
	* library/demos/hello:		lines to all the Tk demo scripts
	* library/demos/ixset:		which are not run as part of
	* library/demos/rmt:		something larger.  [FRQ 815118]
	* library/demos/rolodex: 
	* library/demos/square: 
	* library/demos/tcolor: 
	* library/demos/timer: 
	* library/demos/widget: 

2003-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/safe.test:    Accomodate TIP #150 in the results.
	* tests/textWind.test: Fix a dependancy on font size in 10.1

2003-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkCanvas.c (TkGetStringsFromObjs): 
	* generic/tkPanedWindow.c (PanedWindowWorldChanged): Private
	functions should be either static or prefixed with 'Tk' (thanks to
	George Staplin for spotting this.)

2003-09-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:    Implementation of TIP #150, "Provide
	* win/tkWinSend.c:    'send' command for Windows"
	* win/tkWinSendCom.h:
	* win/tkWinSendCom.c:
